z-index fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,7 @@ body {
     overflow: hidden;
 }
   
+#app-navbar{
+    position: relative;
+    z-index: 1!important;
+}
