--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,3 +14,7 @@
     height: 100%;
     object-fit: cover!important;
 }
+
+#header{
+    z-index: inherit!important;
+}
