--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,6 @@
+#navabar{
+    
+}
 .navbar-scrolled{
     height: 3rem!important;
 }
@@ -61,7 +64,6 @@
     position: fixed;
     top: 0px;
     left: 0;
-    z-index: 20000;
     margin-top: 30px;
 }
 
@@ -81,7 +83,6 @@
     left: 0;
     height: auto!important;
     width: 100%!important;
-    z-index:50000000;
     transform: scaleY(0);
     transform-origin: top;
     transition: all 0.5s;
@@ -98,7 +99,6 @@
     height: 30px;
     width: 100%;
     background-color: #f93700;
-    z-index:10000000000!important;
     transition: 0.5s;
 }
 
