--- a/src/app/test-page/test-page.component.css
+++ b/src/app/test-page/test-page.component.css
@@ -4,3 +4,10 @@
     background-color: brown;
 
 }
+
+#app-portfolio{
+    position: relative;
+    top: 10rem;
+    margin-top: 0;
+    z-index: 0!important;
+}
